k8s-configs/cluster-tools/base/monitoring/newrelic/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: newrelic
#  annotations:
#    argocd.argoproj.io/sync-wave: "-1"
